Added question at end of least squares section

--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -387,7 +387,9 @@ ggplot(first_wave) +
     theme_bw()
 ```
 
-Bonus code: copy and paste this code to perform a grid search -getting the negative log likelihood across a sequence of each parameter value.
+How does this fit compare to the observed data?
+<textarea name='Text1' cols='127' rows='2'></textarea>
+
 ```{r grid-search}
 #| cache: TRUE
 # Specify search grid
